# drawmki

./: .gitignore  CMakeLists.txt  README.md
include/drawmki/: drawmki.h  drawmki.hpp  window.h
include/glad/: gl.h
src/: CMakeLists.txt  window.cpp
